// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardNavButtons/> default props 1`] = `
<div
  className="form-group no-margin-bottom"
>
  <div
    className="col-sm-12"
  >
    <div
      className="pull-left"
    >
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      className="btn-group pull-right"
    >
      <button
        className="btn btn-default"
        disabled={false}
        type="submit"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`<WizardNavButtons/> finish props 1`] = `
<div
  className="form-group no-margin-bottom"
>
  <div
    className="col-sm-12"
  >
    <div
      className="pull-left"
    >
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      className="btn-group pull-right"
    >
      <button
        className="btn btn-info"
        disabled={true}
        type="submit"
      >
        Custom Finish
      </button>
    </div>
  </div>
</div>
`;

exports[`<WizardNavButtons/> with children 1`] = `
<div
  className="form-group no-margin-bottom"
>
  <div
    className="col-sm-12"
  >
    <div
      className="pull-left"
    >
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      className="btn-group pull-right"
    >
      <button
        className="btn btn-default"
        disabled={false}
        type="button"
      >
        first
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        type="button"
      >
        second
      </button>
    </div>
  </div>
</div>
`;
